# Brain-Games

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: brain_lint.yml  hexlet-check.yml  linter-check.yml  test_lint.yml
brain_games/: cli.py  engine.py  game_engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
